tests/ui/methods/method-call-lifetime-args-fail.stderr
error[E0107]: method takes 2 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/method-call-lifetime-args-fail.rs:19:7
   |
LL |     S.early::<'static>();
   |       ^^^^^   ------- supplied 1 lifetime argument
   |       |
   |       expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:9:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --
help: add missing lifetime argument
   |
LL |     S.early::<'static, 'static>();
   |                      +++++++++

error[E0107]: method takes 2 lifetime arguments but 3 lifetime arguments were supplied
  --> $DIR/method-call-lifetime-args-fail.rs:21:7
   |
LL |     S.early::<'static, 'static, 'static>();
   |       ^^^^^                     ------- help: remove this lifetime argument
   |       |
   |       expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:9:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:30:15
   |
LL |     S::late::<'static>(S, &0, &0);
   |               ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:7:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^
help: remove the explicit lifetime argument
   |
LL -     S::late::<'static>(S, &0, &0);
LL +     S::late(S, &0, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:32:15
   |
LL |     S::late::<'static, 'static>(S, &0, &0);
   |               ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:7:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^
help: remove the explicit lifetime arguments
   |
LL -     S::late::<'static, 'static>(S, &0, &0);
LL +     S::late(S, &0, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:34:15
   |
LL |     S::late::<'static, 'static, 'static>(S, &0, &0);
   |               ^^^^^^^  ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:7:13
   |
LL |     fn late<'a, 'b>(self, _: &'a u8, _: &'b u8) {}
   |             ^^
help: remove the explicit lifetime arguments
   |
LL -     S::late::<'static, 'static, 'static>(S, &0, &0);
LL +     S::late(S, &0, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:37:21
   |
LL |     S::late_early::<'static, 'static>(S, &0);
   |                     ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:10:19
   |
LL |     fn late_early<'a, 'b>(self, _: &'a u8) -> &'b u8 { loop {} }
   |                   ^^
help: remove the explicit lifetime arguments
   |
LL -     S::late_early::<'static, 'static>(S, &0);
LL +     S::late_early(S, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:39:21
   |
LL |     S::late_early::<'static, 'static, 'static>(S, &0);
   |                     ^^^^^^^  ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:10:19
   |
LL |     fn late_early<'a, 'b>(self, _: &'a u8) -> &'b u8 { loop {} }
   |                   ^^
help: remove the explicit lifetime arguments
   |
LL -     S::late_early::<'static, 'static, 'static>(S, &0);
LL +     S::late_early(S, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:43:24
   |
LL |     S::late_implicit::<'static>(S, &0, &0);
   |                        ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:8:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^
help: remove the explicit lifetime argument
   |
LL -     S::late_implicit::<'static>(S, &0, &0);
LL +     S::late_implicit(S, &0, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:45:24
   |
LL |     S::late_implicit::<'static, 'static>(S, &0, &0);
   |                        ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:8:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^
help: remove the explicit lifetime arguments
   |
LL -     S::late_implicit::<'static, 'static>(S, &0, &0);
LL +     S::late_implicit(S, &0, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:47:24
   |
LL |     S::late_implicit::<'static, 'static, 'static>(S, &0, &0);
   |                        ^^^^^^^  ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:8:31
   |
LL |     fn late_implicit(self, _: &u8, _: &u8) {}
   |                               ^
help: remove the explicit lifetime arguments
   |
LL -     S::late_implicit::<'static, 'static, 'static>(S, &0, &0);
LL +     S::late_implicit(S, &0, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:50:30
   |
LL |     S::late_implicit_early::<'static, 'static>(S, &0);
   |                              ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:11:41
   |
LL |     fn late_implicit_early<'b>(self, _: &u8) -> &'b u8 { loop {} }
   |                                         ^
help: remove the explicit lifetime arguments
   |
LL -     S::late_implicit_early::<'static, 'static>(S, &0);
LL +     S::late_implicit_early(S, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:52:30
   |
LL |     S::late_implicit_early::<'static, 'static, 'static>(S, &0);
   |                              ^^^^^^^  ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:11:41
   |
LL |     fn late_implicit_early<'b>(self, _: &u8) -> &'b u8 { loop {} }
   |                                         ^
help: remove the explicit lifetime arguments
   |
LL -     S::late_implicit_early::<'static, 'static, 'static>(S, &0);
LL +     S::late_implicit_early(S, &0);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:55:35
   |
LL |     S::late_implicit_self_early::<'static, 'static>(&S);
   |                                   ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:12:37
   |
LL |     fn late_implicit_self_early<'b>(&self) -> &'b u8 { loop {} }
   |                                     ^
help: remove the explicit lifetime arguments
   |
LL -     S::late_implicit_self_early::<'static, 'static>(&S);
LL +     S::late_implicit_self_early(&S);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:57:35
   |
LL |     S::late_implicit_self_early::<'static, 'static, 'static>(&S);
   |                                   ^^^^^^^  ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:12:37
   |
LL |     fn late_implicit_self_early<'b>(&self) -> &'b u8 { loop {} }
   |                                     ^
help: remove the explicit lifetime arguments
   |
LL -     S::late_implicit_self_early::<'static, 'static, 'static>(&S);
LL +     S::late_implicit_self_early(&S);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:60:28
   |
LL |     S::late_unused_early::<'static, 'static>(S);
   |                            ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:13:26
   |
LL |     fn late_unused_early<'a, 'b>(self) -> &'b u8 { loop {} }
   |                          ^^
help: remove the explicit lifetime arguments
   |
LL -     S::late_unused_early::<'static, 'static>(S);
LL +     S::late_unused_early(S);
   |

error: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/method-call-lifetime-args-fail.rs:62:28
   |
LL |     S::late_unused_early::<'static, 'static, 'static>(S);
   |                            ^^^^^^^  ^^^^^^^  ^^^^^^^
   |
note: the late bound lifetime parameter is introduced here
  --> $DIR/method-call-lifetime-args-fail.rs:13:26
   |
LL |     fn late_unused_early<'a, 'b>(self) -> &'b u8 { loop {} }
   |                          ^^
help: remove the explicit lifetime arguments
   |
LL -     S::late_unused_early::<'static, 'static, 'static>(S);
LL +     S::late_unused_early(S);
   |

error[E0107]: method takes 2 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/method-call-lifetime-args-fail.rs:66:8
   |
LL |     S::early::<'static>(S);
   |        ^^^^^   ------- supplied 1 lifetime argument
   |        |
   |        expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:9:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --
help: add missing lifetime argument
   |
LL |     S::early::<'static, 'static>(S);
   |                       +++++++++

error[E0107]: method takes 2 lifetime arguments but 3 lifetime arguments were supplied
  --> $DIR/method-call-lifetime-args-fail.rs:68:8
   |
LL |     S::early::<'static, 'static, 'static>(S);
   |        ^^^^^                     ------- help: remove this lifetime argument
   |        |
   |        expected 2 lifetime arguments
   |
note: method defined here, with 2 lifetime parameters: `'a`, `'b`
  --> $DIR/method-call-lifetime-args-fail.rs:9:8
   |
LL |     fn early<'a, 'b>(self) -> (&'a u8, &'b u8) { loop {} }
   |        ^^^^^ --  --

error: aborting due to 18 previous errors

For more information about this error, try `rustc --explain E0107`.
